--- a/06cookie&session/05通过浏览器获取/templates/index.html
+++ b/06cookie&session/05通过浏览器获取/templates/index.html
@@ -8,8 +8,8 @@
 
 
 <script>
-{#    设置为5s    #}
-    function setCookie(name, value, expires) {
+{#    设置5s#}
+    function 上setCookie(name, value, expires) {
 
         var temp = [];
 {#        获取当前时间#}
