--- a/安全/03通过iframe伪造ajax实现局部刷新/templates/index2.html
+++ b/安全/03通过iframe伪造ajax实现局部刷新/templates/index2.html
@@ -3,9 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>index</title>
-    <link rel="stylesheet" href="{{ static_url('common.css') }}">
 </head>
 <body>
-<h1>index</h1>
+<iframe id="iframePosition" style="width: 100%;height: 100%;" src="https://www.pp100.com"></iframe>
 </body>
 </html>
