--- a/安全/03通过iframe伪造ajax实现局部刷新/templates/index2.html
+++ b/安全/03通过iframe伪造ajax实现局部刷新/templates/index2.html
@@ -3,8 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>index</title>
+    <style>
+        *{
+            margin: 0;
+            padding: 0;
+        }
+    </style>
 </head>
 <body>
-<iframe id="iframePosition" style="width: 100%;height: 100%;" src="https://www.pp100.com"></iframe>
+    <iframe id="iframePosition" style="width: 100%;height: 1000px;" src="https://www.pp100.com"></iframe>
 </body>
-</html>
