--- a/10tornado_upload/03文件上传-jq/templates/upload.html
+++ b/10tornado_upload/03文件上传-jq/templates/upload.html
@@ -2,7 +2,8 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title></title>
+    <title>jq upload files</title>
+    <script type="text/javascript" src="/sss/jquery-1.12.4.min.js"></script>
 </head>
 <body>
 <input type="file" id="img"/>
@@ -16,7 +17,7 @@
 
         $.ajax({
             type: 'POST',
-            url: '/index',
+            url: '/file',
             data: form,
             processData: false,  // tell jQuery not to process the data
             contentType: false,  // tell jQuery not to set contentType
