--- a/11tornado_form/templates/home.html
+++ b/11tornado_form/templates/home.html
@@ -3,7 +3,7 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title></title>
-    <link href="{{static_url("commons.css")}}" rel="stylesheet" />
+    <link href="{{static_url("common.css")}}" rel="stylesheet" />
 </head>
 <body>
     <h1>hello</h1>
